--- a/roles/ispmail-database/tasks/main.yml
+++ b/roles/ispmail-database/tasks/main.yml
@@ -15,6 +15,14 @@
     name: python-psycopg2
     state: present
 
+- name: Wait for postgresql to be ready
+  command: /usr/bin/pg_isready
+  register: pgready
+  until: pgready.rc == 0
+  retries: 30
+  delay: 10
+  changed_when: false
+
 - name: Create SQL mail user (without password)
   postgresql_user:
     name: mail
