Test with single server, fix postgres service

--- a/roles/ispmail-database/tasks/main.yml
+++ b/roles/ispmail-database/tasks/main.yml
@@ -3,10 +3,12 @@
   apt:
     name: postgresql
     state: present
+  environment:
+    RUNLEVEL: 1
 
 - name: Make sure postgresql server is started
   service:
-    name: postgresql
+    name: postgresql@9.6-main
     enabled: true
     state: started
 
@@ -19,8 +21,8 @@
   command: /usr/bin/pg_isready
   register: pgready
   until: pgready.rc == 0
-  retries: 30
-  delay: 10
+  retries: 10
+  delay: 5
   changed_when: false
 
 - name: Create SQL mail user (without password)
